samples/_failures_safe/1761509652_f0e85f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34c52ff9.c: In function ‘main’:
./samples/SAFE/__tmp_34c52ff9.c:127:29: error: expected ‘;’ at end of input
  127 |                 print_matrix
      |                             ^
      |                             ;
./samples/SAFE/__tmp_34c52ff9.c:127:17: error: expected declaration or statement at end of input
  127 |                 print_matrix
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_34c52ff9.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34c52ff9.c:127:17: error: expected declaration or statement at end of input
